--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--------------------------------------------
         Add Favicon
     ---------------------------------------------->
-    <link rel="icon" href="Assets/Images/websiteUsingOnlyHTML-2.jpg" type="image/png">
+    <link rel="icon" href="assets/images/website-using-only-html.jpg" type="image/png">
 
 
 </head>
@@ -33,7 +33,7 @@
                 <table width="80%" cellspacing="0" align="center">
                     <tr>
                         <th width="2%">
-                            <img width="35px" src="Assets/Images/book.png" alt="book">
+                            <img width="35px" src="assets/images/book.png" alt="book">
                         </th>
                         <th width="48%" align="left">
                             <h2>
@@ -85,7 +85,7 @@
                     <tr>
                         <td rowspan="3" width="50%">
                             <img width="80%" height="300px"
-                                src="Assets/Images/websiteUsingOnlyHTML-2.jpg" alt="banner">
+                                src="assets/images/website-using-only-html.jpg" alt="banner">
                         </td>
                         <td width="50%" valign="bottom">
                             <h1>
@@ -155,7 +155,7 @@
                                     <tr>
                                         <td width="30%" align="center">
                                             <br><br>
-                                            <img width="100px" src="Assets/Images/flower.jpg"
+                                            <img width="100px" src="assets/images/flower.jpg"
                                                 alt="flower">
                                             <br><br>
                                         </td>
@@ -170,7 +170,7 @@
                                     <tr bgcolor="#dfdfdd">
                                         <td align="center">
                                             <br><br>
-                                            <img width="100px" src="Assets/Images/flower.jpg"
+                                            <img width="100px" src="assets/images/flower.jpg"
                                                 alt="flower">
                                             <br><br>
                                         </td>
@@ -185,7 +185,7 @@
                                     <tr>
                                         <td align="center">
                                             <br><br>
-                                            <img width="100px" src="Assets/Images/flower.jpg"
+                                            <img width="100px" src="assets/images/flower.jpg"
                                                 alt="flower">
                                             <br><br>
                                         </td>
